<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/adminDashboardRoot"
    android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">
    <com.google.android.material.appbar.MaterialToolbar android:id="@+id/adminDashboardToolbar" android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" android:background="@color/attendance_surface" app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/admin_dashboard" app:titleTextColor="@color/attendance_text" />
    <ScrollView android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:fillViewport="true">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:padding="20dp">
            <com.google.android.material.button.MaterialButton android:id="@+id/userManagementButton" style="@style/Widget.Material3.Button.OutlinedButton" android:layout_width="match_parent" android:layout_height="72dp" android:gravity="center_vertical|start" android:paddingHorizontal="18dp" android:text="@string/user_management_row" android:textAlignment="viewStart" app:icon="@drawable/ic_users" app:iconGravity="textStart" />
            <com.google.android.material.button.MaterialButton android:id="@+id/fingerprintManagementButton" style="@style/Widget.Material3.Button.OutlinedButton" android:layout_width="match_parent" android:layout_height="72dp" android:layout_marginTop="10dp" android:gravity="center_vertical|start" android:paddingHorizontal="18dp" android:text="@string/fingerprint_management_row" android:textAlignment="viewStart" app:icon="@drawable/ic_fingerprint" app:iconGravity="textStart" />
            <com.google.android.material.button.MaterialButton android:id="@+id/backupRestoreButton" style="@style/Widget.Material3.Button.OutlinedButton" android:layout_width="match_parent" android:layout_height="72dp" android:layout_marginTop="10dp" android:gravity="center_vertical|start" android:paddingHorizontal="18dp" android:text="@string/backup_restore_row" android:textAlignment="viewStart" app:icon="@drawable/ic_backup_restore" app:iconGravity="textStart" />
            <com.google.android.material.button.MaterialButton android:id="@+id/deviceSettingsButton" style="@style/Widget.Material3.Button.OutlinedButton" android:layout_width="match_parent" android:layout_height="72dp" android:layout_marginTop="10dp" android:gravity="center_vertical|start" android:paddingHorizontal="18dp" android:text="@string/device_settings_row" android:textAlignment="viewStart" app:icon="@drawable/ic_device_settings" app:iconGravity="textStart" />
            <com.google.android.material.button.MaterialButton android:id="@+id/logoutButton" style="@style/Widget.Material3.Button.OutlinedButton" android:layout_width="match_parent" android:layout_height="56dp" android:layout_marginTop="28dp" android:text="@string/logout" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
